--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="aviso"></div>
 
-    <footer>Criado pela B7Web</footer>
+    <footer>Criado pela Fabricio</footer>
 
     <script src="script.js"></script>
 </body>
